--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,5 +5,7 @@
 <meta charset="UTF-8" />
 <title>{{page.title}} &bull; {{site.title}}</title>
 
+<link rel="stylesheet" type="text/css" href="/styles/pygments.css">
+
 </head>
 <body>
