--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,26 @@
 <meta charset="UTF-8" />
 <title>{{page.title}} &bull; {{site.title}}</title>
 
-<link rel="stylesheet" type="text/css" href="/styles/pygments.css">
+<link rel="stylesheet" type="text/css" href="/styles/pygments/autumn.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/borland.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/bw.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/colorful.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/default.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/emacs.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/friendly.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/fruity.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/github.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/manni.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/monokai.css">
+<link rel="stylesheet" type="text/css" href="/styles/pygments/murphy.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/native.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/pastie.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/perldoc.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/tango.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/trac.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/vim.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/vs.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/zenburn.css" disabled>
 
 </head>
 <body>
