--- a/styles/pygments/monokai.css
+++ b/styles/pygments/monokai.css
@@ -1,3 +1,8 @@
+.highlight {
+	background: #272822;
+	color: #f8f8f2;
+}
+
 .highlight .hll { background-color: #49483e }
 .highlight .c { color: #75715e } /* Comment */
 .highlight .err { color: #960050; background-color: #1e0010 } /* Error */
