add Pygments extracted from VIM

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,5 +26,17 @@
 <link rel="stylesheet" type="text/css" href="/styles/pygments/vs.css" disabled>
 <link rel="stylesheet" type="text/css" href="/styles/pygments/zenburn.css" disabled>
 
+<link rel="stylesheet" type="text/css" href="/styles/pygments/vim/desert.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/vim/freya.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/vim/inkpot.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/vim/mustang.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/vim/no_quarter.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/vim/nuvola.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/vim/peaksea.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/vim/railscasts.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/vim/rdark.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/vim/slate.css" disabled>
+<link rel="stylesheet" type="text/css" href="/styles/pygments/vim/wombat.css" disabled>
+
 </head>
 <body>
