enable home & pagination

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta charset="UTF-8" />
-<title>{{page.title}} &bull; {{site.title}}</title>
+<title>{{page.title}} &bull; Olivier Patry</title>
 
 <link rel="stylesheet" type="text/css" href="/styles/pygments/autumn.css" disabled>
 <link rel="stylesheet" type="text/css" href="/styles/pygments/borland.css" disabled>
