inject colorz theme

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,5 +38,9 @@
 <link rel="stylesheet" type="text/css" href="/styles/pygments/vim/slate.css">
 <link rel="stylesheet" type="text/css" href="/styles/pygments/vim/wombat.css" disabled>
 
+<link rel="stylesheet" href="/themes/colorz/styles.css">
+<link rel="stylesheet" href="/themes/colorz/editcontrols.css">
+<link rel="shortcut icon" href="/themes/colorz/favicon.ico">
+
 </head>
 <body>
