--- a/_layouts/markdown.html
+++ b/_layouts/markdown.html
@@ -4,7 +4,7 @@
 <section class="content" role="content">
 <article>
 <section>
-{{ content }}
+{{ content | markdownify }}
 </section>
 </article>
 </section>
