--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,5 +42,7 @@
 <link rel="stylesheet" href="/themes/colorz/editcontrols.css">
 <link rel="shortcut icon" href="/themes/colorz/favicon.ico">
 
+<link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
+
 </head>
 <body>
