add author pages

--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -5,7 +5,7 @@
 <section class="content" role="content">
 <article>
 <section>
-{{ content }}
+{{ content | markdownify }}
 </section>
 </article>
 </section>
