try using tags without reading much documentation (wrong!)

--- a/_layouts/markdown.html
+++ b/_layouts/markdown.html
@@ -7,6 +7,12 @@
 <section>
 {{ content | markdownify }}
 </section>
+<footer>
+
+{% for post in page.tags %}
+* {{tag}}
+{% endfor %}
+</footer>
 </article>
 </section>
  
