--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,6 +1,19 @@
 
-
+{% if page.previous.url or page.next.url %} 
 <hr>
+	{% if page.previous.url %}
+	&laquo;&nbsp;<a href="{{ page.previous.url }}">{{ page.previous.title }}</a>
+	{% endif %}
+	
+	{% if page.previous.url and page.next.url %} 
+	&bull;
+	{% endif %}
+	
+	{% if page.next.url %}
+	<a href="{{ page.next.url }}">{{ page.next.title }}</a>&nbsp;&raquo;
+	{% endif %} 
+{% endif %} 
+<!--
 <ul class="pagination">
     {% if paginator.previous_page %}
         {% if paginator.previous_page == 1 %}
@@ -38,3 +51,4 @@
         </li>
     {% endif %}
 </ul>
+-->
