Webkit (at least) uses user agent defaults styles for <h1> specific when inside <article>, <aside> and some other but not for <h2>. So the <h1> font-size is ridiculously small compared to subtitles. Defines our font-size policy.

--- a/themes/colorz/styles.css
+++ b/themes/colorz/styles.css
@@ -104,6 +104,18 @@ a:hover, a:focus { color: #0af;
 	*/
 }
 
+h1 {
+	font-size: 1.5em;
+}
+
+h2 {
+	font-size: 1.2em;
+}
+
+h3 {
+	font-size: 1em;
+}
+
 .break {
     -ms-word-break: break-all;
     word-break: break-all;
