[wip] nanoc migration progress (@see #4)
RSS
sitemap
notes content fixes
resume fixes
prev/next links
remove author page
layout includes fixes

--- a/layouts/_pagination.html
+++ b/layouts/_pagination.html
@@ -1,15 +1,8 @@
 
-{% if page.previous.url or page.next.url %} 
 <hr>
-	{% if page.previous.url %}
-	&laquo;&nbsp;<a href="{{ page.previous.url }}">{{ page.previous.title }}</a>
-	{% endif %}
-	
-	{% if page.previous.url and page.next.url %} 
-	&bull;
-	{% endif %}
-	
-	{% if page.next.url %}
-	<a href="{{ page.next.url }}">{{ page.next.title }}</a>&nbsp;&raquo;
-	{% endif %} 
-{% endif %} 
+
+<p id="navlinks" class="navinfos">
+<%= previous_link %>
+<span>&bull;</span>
+<%= next_link %>
+</p>
