--- a/layouts/_title.html
+++ b/layouts/_title.html
@@ -1,6 +1,5 @@
 	<header class="title" role="title">
-		<div class="author">
-			<span class="firstname">Olivier</span>
-			<span class="lastname">Patry</span>
-		</div>
+		<h1 class="author">
+		<a href="/" title="back to home"><%= @config[:site][:name] %></a>
+		</h1>
 	</header>
