fix HTML/CSS invalidities

--- a/layouts/_title.html
+++ b/layouts/_title.html
@@ -1,4 +1,4 @@
-	<header class="title" role="title">
+	<header class="title">
 		<h1 class="author">
 		<a href="/" title="back to home"><%= @config[:site][:name] %></a>
 		</h1>
