--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,7 +1,7 @@
 <%= render '_header' %>
 <%= render '_title' %>
 
-<section class="content" role="content">
+<section class="content">
 <article>
 <section>
 <%= yield %>
