--- a/layouts/_header.html
+++ b/layouts/_header.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta charset="UTF-8" />
-<title><%= item[:title] %> &bull; <%= @config[:site][:name] %></title>
+<title><%= item[:title] %> | <%= @config[:site][:name] %></title>
 
 
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:300,300italic">
