invite readers to fix any error through the GitHub URL associated to the current item

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -15,4 +15,10 @@
 <% unless item[:kind] != 'note' %>
 <%= render '_pagination' %>
 <% end %>
+
+<footer>
+An error? You can fix it directly by sending a Pull Request on 
+<a href="<%= @config[:site][:repo] %>/tree/master/<%= item.raw_filename %>">GitHub</a>.
+</footer>
+
 <%= render '_footer' %>
