--- a/static/assets/styles.css
+++ b/static/assets/styles.css
@@ -119,3 +119,48 @@ pre code {
 footer {
   font-size: .8em;
 }
+
+.special-links a
+{
+  color: inherit;
+  text-decoration: none;
+}
+
+/*
+ * IconMoon icon set
+ */
+
+@font-face {
+  font-family: 'icomoon';
+  src:url('fonts/icomoon.eot?7bxcjh');
+  src:url('fonts/icomoon.eot?#iefix7bxcjh') format('embedded-opentype'),
+    url('fonts/icomoon.woff?7bxcjh') format('woff'),
+    url('fonts/icomoon.ttf?7bxcjh') format('truetype'),
+    url('fonts/icomoon.svg?7bxcjh#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  font-family: 'icomoon';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-feed:before {
+  content: "\e600";
+}
+.icon-github:before {
+  content: "\e601";
+}
+.icon-linkedin:before {
+  content: "\e602";
+}
