--- a/static/assets/styles.css
+++ b/static/assets/styles.css
@@ -21,15 +21,17 @@ body {
   color: #2c3e50;
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
-  font-size: 1.5em;
+  font-size: 16px;
   margin: 0;
   padding: 0;
   border-top: 5px solid #c0392b;
 }
 
 .site {
-  width: 800px;
+  max-width: 800px;
   margin: 2em auto;
+  padding: 0 1em;
+  font-size: 1.5em;
 }
 
 .navinfos {
@@ -137,10 +139,15 @@ footer {
   font-size: .8em;
 }
 
-.special-links a
-{
+.special-links a {
   color: inherit;
   text-decoration: none;
+}
+
+@media screen and (max-width: 1000px) {
+  .special-links a {
+    font-size: 48px;
+  }
 }
 
 /*
