Android Chrome theme color

--- a/layouts/_header.html
+++ b/layouts/_header.html
@@ -11,6 +11,10 @@
 <link rel="stylesheet" type="text/css" href="/assets/pygments/manni.css">
 <link rel="shortcut icon" href="/favicon.ico">
 
+
+<!-- Android Chrome 39+ theme color -->
+<meta name="theme-color" content="#c0392b">
+
 <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
 
 </head>
