--- a/static/assets/styles.css
+++ b/static/assets/styles.css
@@ -11,6 +11,8 @@ amethyst #9b59b6
 wisteria #8e44ad
 concrete #95a5a6
 abestos #7f8c8d
+peter river #3498db
+belize hile #2980b9
 */
 
 *, *:before, *:after {
@@ -18,13 +20,13 @@ abestos #7f8c8d
 }
 
 body {
-  color: #2c3e50;
+  color: #34495e;
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
   font-size: 16px;
   margin: 0;
   padding: 0;
-  border-top: 5px solid #c0392b;
+  border-top: 5px solid #3498db;
 }
 
 .site {
@@ -50,20 +52,20 @@ h1, h2, h3 {
 }
 
 .author {
-  color: #c0392b;
+  color: #2c3e50;
   font-size: 1.5em;
 }
 
 a, a:link {
   text-decoration: none;
-  color: #e74c3c;
+  color: #3498db;
 }
 
 a:visited,
 a:hover,
 a:active {
   text-decoration: underline;
-  color: #c0392b;
+  color: #2980b9;
 }
 
 p {
