Revert "Removed link to notes (not enough useful for expected audience)."
This reverts commit d5e7d9e1a19552f4a6447ea3ee81874c947a94cd.

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -18,5 +18,11 @@
   <% end %>
   </article>
 </section>
+ 
+
+<footer>
+An error? You can fix it directly by sending a Pull Request on 
+<a href="<%= @config[:site][:repo] %>/tree/master/<%= item.raw_filename %>">GitHub</a>.
+</footer>
 
 <%= render '_footer' %>
