--- a/layouts/_header.html
+++ b/layouts/_header.html
@@ -15,6 +15,8 @@
   <!-- Android Chrome 39+ theme color -->
   <meta name="theme-color" content="#c0392b">
 
+<link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
+
 </head>
 <body>
 
