[ci] Added Firebase hosting triggered by Bitbucket pipelines

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -18,11 +18,9 @@
   <% end %>
   </article>
 </section>
- 
 
 <footer>
-An error? You can fix it directly by sending a Pull Request on 
-<a href="<%= @config[:site][:repo] %>/tree/master/<%= item.raw_filename %>">GitHub</a>.
+An error? You can fix it directly by sending a <a href="<%= @config[:site][:repo] %>/pull-requests/new">Pull Request</a> or creating a <a href="<%= @config[:site][:repo] %>/issues/new">new issue</a>.
 </footer>
 
 <%= render '_footer' %>
