[ui] Fixed theme-color since migration from orange to blue

--- a/layouts/_header.html
+++ b/layouts/_header.html
@@ -13,7 +13,7 @@
 
 
   <!-- Android Chrome 39+ theme color -->
-  <meta name="theme-color" content="#c0392b">
+  <meta name="theme-color" content="#3498db">
 
 <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
 
