--- a/layouts/_header.html
+++ b/layouts/_header.html
@@ -5,17 +5,17 @@
   <meta charset="UTF-8" />
   <title><%= item[:title] %> | <%= @config[:site][:name] %></title>
 
-
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:300,300italic">
   <link rel="stylesheet" type="text/css" href="/assets/styles.css">
   <link rel="stylesheet" type="text/css" href="/assets/pygments/manni.css">
   <link rel="shortcut icon" href="/favicon.ico">
 
+  <meta name=viewport content="width=device-width">
 
   <!-- Android Chrome 39+ theme color -->
   <meta name="theme-color" content="#3498db">
 
-<link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
 
 </head>
 <body>
