[ui] Improved layout

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,7 +1,7 @@
 <%= render '_header' %>
 <%= render '_title' %>
 
-<section class="content">
+<div class="content">
   <article>
     <header>
     <h1><%= item[:title] %></h1>
@@ -17,6 +17,6 @@
     </footer>
   <% end %>
   </article>
-</section>
+</div>
 
 <%= render '_footer' %>
