--- a/static/assets/styles.css
+++ b/static/assets/styles.css
@@ -90,7 +90,11 @@ blockquote {
 }
 
 pre {
-  white-space: pre-wrap;
+  white-space: pre-wrap;       /* Chrome & Safari */
+  white-space: -moz-pre-wrap;  /* Mozilla since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
 
   padding: .5em;
 
