--- a/content/assets/styles.scss
+++ b/content/assets/styles.scss
@@ -125,6 +125,11 @@ img, iframe {
   max-width: 100%;
 }
 
+img[src$=".svg"] {
+    margin: 0 6px -6px 0;
+    width: 24px;
+}
+
 iframe {
   border: 0 none;
 }
@@ -168,38 +173,64 @@ footer {
 /*
  * IconMoon icon set
  */
-
 @font-face {
-  font-family: 'icomoon';
-  src:url('fonts/icomoon.eot?7bxcjh');
-  src:url('fonts/icomoon.eot?#iefix7bxcjh') format('embedded-opentype'),
-    url('fonts/icomoon.woff?7bxcjh') format('woff'),
-    url('fonts/icomoon.ttf?7bxcjh') format('truetype'),
-    url('fonts/icomoon.svg?7bxcjh#icomoon') format('svg');
+  font-family: 'opatry';
+  src: url('fonts/opatry.eot?41466537');
+  src: url('fonts/opatry.eot?41466537#iefix') format('embedded-opentype'),
+       url('fonts/opatry.woff2?41466537') format('woff2'),
+       url('fonts/opatry.woff?41466537') format('woff'),
+       url('fonts/opatry.ttf?41466537') format('truetype'),
+       url('fonts/opatry.svg?41466537#opatry') format('svg');
   font-weight: normal;
   font-style: normal;
 }
-
-[class^="icon-"], [class*=" icon-"] {
-  font-family: 'icomoon';
-  speak: none;
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/*
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: 'opatry';
+    src: url('fonts/opatry.svg?41466537#opatry') format('svg');
+  }
+}
+*/
+ 
+ [class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "opatry";
   font-style: normal;
   font-weight: normal;
+  speak: none;
+ 
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+ 
+  /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
-  line-height: 1;
-
-  /* Better Font Rendering =========== */
+ 
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+ 
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+ 
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+ 
+  /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+ 
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
-
-.icon-feed:before {
-  content: "\e600";
-}
-.icon-github:before {
-  content: "\e601";
-}
-.icon-linkedin:before {
-  content: "\e602";
-}
+ 
+.icon-twitter:before { content: '\f099'; } /* '' */
+.icon-github-circled:before { content: '\f09b'; } /* '' */
+.icon-rss-squared:before { content: '\f143'; } /* '' */
+.icon-linkedin-squared:before { content: '\f30c'; } /* '' */
