--- a/static/assets/styles.css
+++ b/static/assets/styles.css
@@ -1,41 +1,40 @@
----
-layout: none
----
-
 @charset "UTF-8";
 
-/* flat UI colors */
-$flatui-cloud-color: #ecf0f1;
-$flatui-silver-color: #bdc3c7;
-$flatui-alizarin-color: #e74c3c;
-$flatui-pomegranate-color: #c0392b;
-$flatui-midnightblue-color: #2c3e50;
-$flatui-wet_asphalt-color: #34495e;
-$flatui-amethyst-color: #9b59b6;
-$flatui-wisteria-color: #8e44ad;
-$flatui-concrete-color: #95a5a6;
-$flatui-abestos-color: #7f8c8d;
-$flatui-peter_river-color: #3498db;
-$flatui-belize_hile-color: #2980b9;
+:root {
+  /* flat UI colors */
+  --flatui-cloud-color: #ecf0f1;
+  --flatui-silver-color: #bdc3c7;
+  --flatui-alizarin-color: #e74c3c;
+  --flatui-pomegranate-color: #c0392b;
+  --flatui-midnightblue-color: #2c3e50;
+  --flatui-wet_asphalt-color: #34495e;
+  --flatui-amethyst-color: #9b59b6;
+  --flatui-wisteria-color: #8e44ad;
+  --flatui-concrete-color: #95a5a6;
+  --flatui-abestos-color: #7f8c8d;
+  --flatui-peter_river-color: #3498db;
+  --flatui-belize_hile-color: #2980b9;
 
-$width-breakpoint: 1000px;
+  --width-breakpoint: 1000px;
+}
+
 
 *, *:before, *:after {
   box-sizing: border-box;
 }
 
 body {
-  color: $flatui-wet_asphalt-color;
+  color: var(--flatui-wet_asphalt-color);
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
   font-size: 16px;
   margin: 0;
   padding: 0;
-  border-top: 5px solid $flatui-peter_river-color;
+  border-top: 5px solid var(--flatui-peter_river-color);
 }
 
 .site {
-  max-width: $width-breakpoint;
+  max-width: var(--width-breakpoint);
   margin: 2em auto;
   padding: 0 1em;
   font-size: 1.5em;
@@ -46,31 +45,31 @@ body {
 }
 
 hr {
-  background-color: $flatui-silver-color;
+  background-color: var(--flatui-silver-color);
   height: 1px;
   border: 0 none;
 }
 
 h1, h2, h3 {
-  color: $flatui-wet_asphalt-color;
+  color: var(--flatui-wet_asphalt-color);
   font-weight: 300;
 }
 
 .author {
-  color: $flatui-midnightblue-color;
+  color: var(--flatui-midnightblue-color);
   font-size: 1.5em;
 }
 
 a, a:link {
   text-decoration: none;
-  color: $flatui-peter_river-color;
+  color: var(--flatui-peter_river-color);
 }
 
 a:visited,
 a:hover,
 a:active {
   text-decoration: underline;
-  color: $flatui-belize_hile-color;
+  color: var(--flatui-belize_hile-color);
 }
 
 p {
@@ -90,7 +89,7 @@ li > p {
 }
 
 blockquote {
-  color: $flatui-abestos-color;
+  color: var(--flatui-abestos-color);
   font-style: italic;
 }
 
@@ -103,8 +102,8 @@ pre {
 
   padding: .5em;
 
-  color: $flatui-midnightblue-color;
-  background-color: $flatui-cloud-color;
+  color: var(--flatui-midnightblue-color);
+  background-color: var(--flatui-cloud-color);
 }
 
 code, pre {
@@ -113,7 +112,7 @@ code, pre {
 }
 
 :not(pre) > code {
-  color: $flatui-alizarin-color;
+  color: var(--flatui-alizarin-color);
   padding: .05em .25em;
 }
 
@@ -152,7 +151,7 @@ iframe {
 }
 
 .disabled {
-  color: $flatui-silver-color;
+  color: var(--flatui-silver-color);
 }
 
 footer {
