--- a/layouts/_title.html
+++ b/layouts/_title.html
@@ -1,5 +1,5 @@
 <header class="title">
   <h1 class="author">
-  <a href="/" title="back to home"><%= @config[:site][:name] %></a>
+  <a href="<%= @items['/index.*'].path %>" title="back to home"><%= @config[:site][:name] %></a>
   </h1>
 </header>
