--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,103 +1,141 @@
 @charset "UTF-8";
-/* flat UI colors */
+
+:root {
+  /* flat UI colors */
+  --flatui-cloud-color: #ecf0f1;
+  --flatui-silver-color: #bdc3c7;
+  --flatui-alizarin-color: #e74c3c;
+  --flatui-pomegranate-color: #c0392b;
+  --flatui-midnightblue-color: #2c3e50;
+  --flatui-wet_asphalt-color: #34495e;
+  --flatui-amethyst-color: #9b59b6;
+  --flatui-wisteria-color: #8e44ad;
+  --flatui-concrete-color: #95a5a6;
+  --flatui-abestos-color: #7f8c8d;
+  --flatui-peter_river-color: #3498db;
+  --flatui-belize_hile-color: #2980b9;
+
+  --width-breakpoint: 1000px;
+}
+
+
 *, *:before, *:after {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 body {
-  color: #34495e;
+  color: var(--flatui-wet_asphalt-color);
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
   font-size: 16px;
   margin: 0;
   padding: 0;
-  border-top: 5px solid #3498db; }
+  border-top: 5px solid var(--flatui-peter_river-color);
+}
 
 .site {
-  max-width: 1000px;
+  max-width: var(--width-breakpoint);
   margin: 2em auto;
   padding: 0 1em;
-  font-size: 1.5em; }
+  font-size: 1.5em;
+}
 
 .navinfos {
-  text-align: center; }
+  text-align: center;
+}
 
 hr {
-  background-color: #bdc3c7;
+  background-color: var(--flatui-silver-color);
   height: 1px;
-  border: 0 none; }
+  border: 0 none;
+}
 
 h1, h2, h3 {
-  color: #34495e;
-  font-weight: 300; }
+  color: var(--flatui-wet_asphalt-color);
+  font-weight: 300;
+}
 
 .author {
-  color: #2c3e50;
-  font-size: 1.5em; }
+  color: var(--flatui-midnightblue-color);
+  font-size: 1.5em;
+}
 
 a, a:link {
   text-decoration: none;
-  color: #3498db; }
+  color: var(--flatui-peter_river-color);
+}
 
 a:visited,
 a:hover,
 a:active {
   text-decoration: underline;
-  color: #2980b9; }
+  color: var(--flatui-belize_hile-color);
+}
 
 p {
-  line-height: 1.5em; }
+  line-height: 1.5em;
+}
 
 dd {
-  margin: .5em 2em 1em; }
+  margin: .5em 2em 1em;
+}
 
 ul {
-  list-style-type: circle; }
+  list-style-type: circle;
+}
 
 li > p {
-  margin: 0; }
+  margin: 0;
+}
 
 blockquote {
-  color: #7f8c8d;
-  font-style: italic; }
+  color: var(--flatui-abestos-color);
+  font-style: italic;
+}
 
 pre {
-  white-space: pre-wrap;
-  /* Chrome & Safari */
-  white-space: -moz-pre-wrap;
-  /* Mozilla since 1999 */
-  white-space: -pre-wrap;
-  /* Opera 4-6 */
-  white-space: -o-pre-wrap;
-  /* Opera 7 */
-  word-wrap: break-word;
-  /* Internet Explorer 5.5+ */
+  white-space: pre-wrap;       /* Chrome & Safari */
+  white-space: -moz-pre-wrap;  /* Mozilla since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+
   padding: .5em;
-  color: #2c3e50;
-  background-color: #ecf0f1; }
+
+  color: var(--flatui-midnightblue-color);
+  background-color: var(--flatui-cloud-color);
+}
 
 code, pre {
   font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
-  font-size: 15px; }
+  font-size: 15px;
+}
 
 :not(pre) > code {
-  color: #e74c3c;
-  padding: .05em .25em; }
+  color: var(--flatui-alizarin-color);
+  padding: .05em .25em;
+}
 
 pre code {
-  background: transparent; }
+  background: transparent;
+}
 
 img, iframe {
-  max-width: 100%; }
+  max-width: 100%;
+}
 
 img[src$=".svg"] {
-  margin: 0 6px -6px 0;
-  width: 24px; }
+    margin: 0 6px -6px 0;
+    width: 24px;
+}
 
 iframe {
-  border: 0 none; }
+  border: 0 none;
+}
 
 .code-container {
-  position: relative; }
+  position: relative;
+}
 
 .langspec {
   text-align: right;
@@ -109,30 +147,42 @@ iframe {
   font-weight: bold;
   position: absolute;
   top: 0;
-  right: 0; }
+  right: 0;
+}
 
 .disabled {
-  color: #bdc3c7; }
+  color: var(--flatui-silver-color);
+}
 
 footer {
-  font-size: .8em; }
+  font-size: .8em;
+}
 
 .special-links a {
   color: inherit;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: $width-breakpoint) {
   .special-links a {
-    font-size: 48px; } }
+    font-size: 48px;
+  }
+}
+
 /*
  * IconMoon icon set
  */
 @font-face {
   font-family: 'opatry';
-  src: url("fonts/opatry.eot?41466537");
-  src: url("fonts/opatry.eot?41466537#iefix") format("embedded-opentype"), url("fonts/opatry.woff2?41466537") format("woff2"), url("fonts/opatry.woff?41466537") format("woff"), url("fonts/opatry.ttf?41466537") format("truetype"), url("fonts/opatry.svg?41466537#opatry") format("svg");
+  src: url('fonts/opatry.eot?41466537');
+  src: url('fonts/opatry.eot?41466537#iefix') format('embedded-opentype'),
+       url('fonts/opatry.woff2?41466537') format('woff2'),
+       url('fonts/opatry.woff?41466537') format('woff'),
+       url('fonts/opatry.ttf?41466537') format('truetype'),
+       url('fonts/opatry.svg?41466537#opatry') format('svg');
   font-weight: normal;
-  font-style: normal; }
+  font-style: normal;
+}
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
 /*
@@ -143,46 +193,43 @@ footer {
   }
 }
 */
-[class^="icon-"]:before, [class*=" icon-"]:before {
+ 
+ [class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "opatry";
   font-style: normal;
   font-weight: normal;
   speak: none;
+ 
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
   margin-right: .2em;
   text-align: center;
   /* opacity: .8; */
+ 
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
+ 
   /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
+ 
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
   margin-left: .2em;
+ 
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
+ 
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+ 
   /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */ }
-
-.icon-twitter:before {
-  content: '\f099'; }
-
-/* '' */
-.icon-github-circled:before {
-  content: '\f09b'; }
-
-/* '' */
-.icon-rss-squared:before {
-  content: '\f143'; }
-
-/* '' */
-.icon-linkedin-squared:before {
-  content: '\f30c'; }
-
-/* '' */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+ 
+.icon-twitter:before { content: '\f099'; } /* '' */
+.icon-github-circled:before { content: '\f09b'; } /* '' */
+.icon-rss-squared:before { content: '\f143'; } /* '' */
+.icon-linkedin-squared:before { content: '\f30c'; } /* '' */
