previous_link and next_link now explicitly take an item as parameter to avoid assuming it's the current one

--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -44,9 +44,9 @@
     <hr>
 
     <p id="navlinks" class="navinfos">
-    <%= previous_link %>
+    <%= previous_link(item) %>
     <span>|</span>
-    <%= next_link %>
+    <%= next_link(item) %>
     </p>
     </footer>
 <% end %>
