--- a/assets/styles.css
+++ b/assets/styles.css
@@ -19,7 +19,7 @@
 }
 
 
-*, *:before, *:after {
+*, *::before, *::after {
   box-sizing: border-box;
 }
 
@@ -38,6 +38,12 @@ body {
   margin: 2em auto;
   padding: 0 1em;
   font-size: 1.5em;
+}
+
+.metatada {
+  text-align: right;
+  font-style: italic;
+  font-size: 0.8em;
 }
 
 .navinfos {
@@ -70,6 +76,15 @@ a:hover,
 a:active {
   text-decoration: underline;
   color: var(--flatui-belize_hile-color);
+}
+
+a[href^="https://"]::after,
+a[href^="http://"]::after {
+  content: "[↗︎]";
+  font-size: 0.5em;
+  padding-left: .5em;
+  text-decoration: none;
+  color: var(--flatui-wisteria-color);
 }
 
 p {
@@ -163,7 +178,11 @@ footer {
   text-decoration: none;
 }
 
-@media screen and (max-width: $width-breakpoint) {
+.special-links a::after {
+  content: none;
+}
+
+@media screen and (max-width: var(--width-breakpoint)) {
   .special-links a {
     font-size: 48px;
   }
@@ -194,7 +213,7 @@ footer {
 }
 */
  
- [class^="icon-"]:before, [class*=" icon-"]:before {
+ [class^="icon-"]::before, [class*=" icon-"]::before {
   font-family: "opatry";
   font-style: normal;
   font-weight: normal;
