Do not use var(--foo) in media queries because it's not supported
See https://stackoverflow.com/a/40723269/2551689

> From the [spec](https://www.w3.org/TR/css-variables-1/#using-variables),
>
> > The `var()` function can be used in place of any part of a value in any property on an element. The `var()` function can not be used as property names, selectors, or anything else besides property values. (Doing so usually produces invalid syntax, or else a value whose meaning has no connection to the variable.)
>
> So no, you can't use it in a media query.
>
> And that makes sense. Because you can set `--mobile-breakpoint` e.g. to `:root`, that is, the `<html>` element, and from there be inherited to other elements. But a media query is not an element, it does not inherit from `<html>`, so it can't work.
>
> This is not what CSS variables are trying to accomplish. You can use a CSS preprocessor instead.

--- a/static/assets/styles.css
+++ b/static/assets/styles.css
@@ -14,8 +14,6 @@
   --flatui-abestos-color: #7f8c8d;
   --flatui-peter_river-color: #3498db;
   --flatui-belize_hile-color: #2980b9;
-
-  --width-breakpoint: 1000px;
 }
 
 
@@ -34,7 +32,7 @@ body {
 }
 
 .site {
-  max-width: var(--width-breakpoint);
+  max-width: 1000px;
   margin: 2em auto;
   padding: 0 1em;
   font-size: 1.5em;
@@ -182,7 +180,7 @@ footer {
   content: none;
 }
 
-@media screen and (max-width: var(--width-breakpoint)) {
+@media screen and (max-width: 1000px) {
   .special-links a {
     font-size: 48px;
   }
