Fix typo in metadata class name

--- a/layouts/note.html.erb
+++ b/layouts/note.html.erb
@@ -13,7 +13,7 @@
     </section>
 
     <footer>
-    <p class="metatada">Originally published on <%= get_pretty_date(item) %>.</p>
+    <p class="metadata">Originally published on <%= get_pretty_date(item) %>.</p>
 
     <hr>
 
