--- a/assets/styles.css
+++ b/assets/styles.css
@@ -109,10 +109,26 @@ pre {
   white-space: -o-pre-wrap;    /* Opera 7 */
   word-wrap: break-word;       /* Internet Explorer 5.5+ */
 
-  padding: .5em;
+  padding: .8em;
 
-  color: var(--flatui-midnightblue-color);
+  color: var(--flatui-cloud-color);
   background-color: var(--flatui-cloud-color);
+  border-radius: 10px;
+  position: relative;
+}
+
+pre[data-langspec]::before {
+  content: attr(data-langspec);
+  color: var(--flatui-peter_river-color);
+  text-align: right;
+  text-transform: uppercase;
+  letter-spacing: -.05em;
+  padding: .7em;
+  font-size: .7em;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 10;
 }
 
 code, pre {
@@ -140,23 +156,6 @@ img[src$=".svg"] {
 
 iframe {
   border: 0 none;
-}
-
-.code-container {
-  position: relative;
-}
-
-.langspec {
-  text-align: right;
-  text-transform: lowercase;
-  background: white;
-  border-bottom-left-radius: 10px;
-  padding: .5em;
-  font-size: .55em;
-  font-weight: bold;
-  position: absolute;
-  top: 0;
-  right: 0;
 }
 
 .disabled {
