Apply Content-Security-Policy headers (fixes #25)

--- a/static/assets/styles.css
+++ b/static/assets/styles.css
@@ -173,6 +173,12 @@ pre code {
   background: transparent;
 }
 
+.centered-media {
+  margin: 0 auto;
+  width: 560px;
+  max-width: 100%;
+}
+
 img, iframe {
   max-width: 100%;
 }
