--- a/static/assets/styles.css
+++ b/static/assets/styles.css
@@ -188,6 +188,17 @@ img[src$=".svg"] {
     width: 30px;
 }
 
+.special-links svg {
+  width: 1em;
+  margin-right: 0.2em;
+  text-align: center;
+  line-height: 1em;
+  margin-left: 0.2em;
+  vertical-align: text-bottom;
+  width: 24px;
+  height: 24px;
+}
+
 iframe {
   border: 0 none;
 }
